--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,11 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-
 @custom-variant dark (&:is(.dark *));
-html,body,:root{
-   height: 100%;
+html,
+body,
+:root {
+  height: 100%;
 }
 @theme inline {
   --color-background: var(--background);
@@ -52,8 +53,12 @@ html,body,:root{
 }
 
 @keyframes indeterminate {
-  0%   { transform: translateX(-60%); }
-  100% { transform: translateX(160%); }
+  0% {
+    transform: translateX(-60%);
+  }
+  100% {
+    transform: translateX(160%);
+  }
 }
 
 .progress-indeterminate {
@@ -62,11 +67,10 @@ html,body,:root{
   width: 40%;
   height: 100%;
   border-radius: 9999px;
-  background: #FFD700;
-  box-shadow: 0 0 10px #FFD700, 0 0 20px #F9B208;
+  background: #ffd700;
+  box-shadow: 0 0 10px #ffd700, 0 0 20px #f9b208;
   animation: indeterminate 1.1s ease-in-out infinite;
 }
-
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
